5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1667_2319.log
== TEST (2019-04-16 16:02:49) 
-- CODE:
input("Nome do Bruxo: ").lower()


-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:03:24) 
-- CODE:
input("Nome do Bruxo: ").lower()


-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:03:32) 
-- CODE:
input("Nome do Bruxo: ").lower()


-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:16) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("RONY"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:06:31) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("RONY"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)



-- EXECUTION TIME:
0.140747
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:43) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("RONY"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:48) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 299



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:07:59) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 299



-- EXECUTION TIME:
0.207532
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:27) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:08:28) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789



-- EXECUTION TIME:
0.153306
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:29) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:50) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:08:57) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789



-- EXECUTION TIME:
0.122068
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:02) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:10) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:47) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:10:48) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.237146
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:48) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:11:01) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.157915
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:07) 
-- CODE:
input("Nome do Bruxo: ").lower()
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:44) 
-- CODE:
input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:46) 
-- CODE:
input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:55) 
-- CODE:
input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:11:56) 
-- CODE:
input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.123209
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:58) 
-- CODE:
input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:12:05) 
-- CODE:
input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.150361
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:11) 
-- CODE:
input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:41) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:12:49) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.197793
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:52) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if ("HERMIONE").lower():
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:27) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:13:29) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.169678
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:29) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:39) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:40) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:40) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:01) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:14:08) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("HERMIONE"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.203265
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:14:26) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.118975
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:27) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:15:14) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.129703
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:15) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").lower()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:55) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:56) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if (nomedobruxo.upper())
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo.upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:57) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if (nomedobruxo.upper())
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo.upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:20) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo.upper())
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo.upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:21) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo.upper())
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo.upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:22) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo.upper())
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo.upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:23) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo.upper())
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo.upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:23) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo.upper())
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo.upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:23) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo.upper())
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo.upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:44) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "Hermione")
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo == "Hermione")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:01) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo ==  "Hermione")
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo ==  "Hermione")
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:11) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo = "Hermione")
   nomedobruxo.lower()
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo = "Hermione")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:25) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo = "Hermione")
   espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo = "Hermione")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:55) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if (nomedobruxo == ("Hermione"))
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo == ("Hermione"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:56) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if (nomedobruxo == ("Hermione"))
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo == ("Hermione"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:56) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if (nomedobruxo == ("Hermione"))
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo == ("Hermione"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:57) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if (nomedobruxo == ("Hermione"))
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- ERROR:
File "XXXX", line 2
    if (nomedobruxo == ("Hermione"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:01) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:42) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if (nomedobruxo == "Hermione"):
	nomedobruxo.lower()
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:20:44) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if (nomedobruxo == "Hermione"):
	nomedobruxo.lower()
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.180531
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.15515803132820466
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:45) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if (nomedobruxo == "Hermione"):
	nomedobruxo.lower()
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:16) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:21:22) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- EXECUTION TIME:
0.273173
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:24) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)



-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:21:28) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)

-- EXECUTION TIME:
0.20065
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:29) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ").upper()
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)

-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:26) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if ("Hermione"):
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)

-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:10) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:23:11) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)

-- EXECUTION TIME:
0.179274
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.15515803132820466
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:12) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	espaco = 2.9994
	tempo = 8.789
	print(espaco/tempo)
else:
	espaco2 = 1.674
	tempo2 = 10.789
	print(espaco2/tempo2)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:32) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(espaco/tempo)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:33) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(espaco/tempo)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- EXECUTION TIME:
0.186779
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.15515803132820466
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:34) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(espaco/tempo)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:06) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(M1/S1)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:12) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(M1/S1)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:25:14) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(M1/S1)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- EXECUTION TIME:
0.194335
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.15515803132820466
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:20) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "HERMIONE"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(M1/S1)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:35) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "Hermione"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(M1/S1)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:25:45) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "Hermione"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(M1/S1)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- EXECUTION TIME:
0.105372
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:58:45) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "Hermione"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(M1/S1)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:01:02) 
-- CODE:
nomedobruxo = input("Nome do Bruxo: ")
if (nomedobruxo == "Hermione"):
	nomedobruxo.lower()
	M1 = 2.9994
	S1 = 8.789
	print(M1/S1)
else:
	M2 = 1.674
	S2 = 10.789
	print(M2/S2)

-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
